Remove fixed size from inputs & fix jumping hover

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -205,7 +205,7 @@
 
 @mixin input-style {
   &:hover {
-    border: 2px solid $color-blue-light;
+    box-shadow: 0 0 0 2px $color-blue-light;
   }
 
   &:user-invalid {
