--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -2,7 +2,6 @@
 @use "../abstracts/mixins" as *;
 
 .input {
-  height: 64px;
   @include input;
   @include input-style;
 }
